# rinhaback2401-02

./: .dockerignore  .editorconfig  .gitattributes  Cargo.toml  Dockerfile  Dockerfile.dynamic  Dockerfile.pgbouncer  Dockerfile.static  Transacoes.http  docker-compose.dynamic.yml  docker-compose.static.yml  docker-compose.yml  pgbouncer-docker-entrypoint.sh
sql/: criartransacao.sql  ddl.sql  runfunction.sql
src/: db.rs  main.rs  model.rs
