[package]
name = "rinhaback2401"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
may = "0.3.42"
may_minihttp = { git = "https://github.com/giggio/may_minihttp.git", rev = "6abcd21", default-features = false }
#may_minihttp = { path = '../may_minihttp', default-features = false }
# may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git", rev = "f8241e7", default-features = false }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git", rev = "bf1d86e", default-features = false, features = [
    "with-chrono-0_4",
] }
log = { version = "0.4", features = ["release_max_level_off"] }
# mimalloc = { version = "0.1", default-features = false }
postgres-types = { version = "0.1.3", features = ["derive"] }
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
lazy_static = "1.4.0"

[profile.release]
debug = false
incremental = false
overflow-checks = false
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'

[profile.profiling]
inherits = "release"
debug = true
